--- a/src/main/webapp/WEB-INF/static/css/style.css
+++ b/src/main/webapp/WEB-INF/static/css/style.css
@@ -19,7 +19,7 @@ General
 
 body{
 	text-align: center;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 14px;
 	line-height: 1.6em;
 }
@@ -139,7 +139,7 @@ Navbar
 
 nav.navbar{
 	position: fixed;
-	top: -72px;
+	/* top: -72px; 시작부터 상단에 고정 */ 
 	margin-bottom: 0px;
 	padding: 10px 0px 10px 0px;
 	width: 100%;
@@ -150,7 +150,10 @@ nav.navbar{
 .navbar-nav{
 	float: right;
 }
-
+/* /* 추가
+.navbar-nav .has-sub{
+	float: right;
+} */
 nav.navbar.fixed-to-top{
 	top: 0px;
 }
@@ -159,7 +162,8 @@ nav.navbar.fixed-to-top{
 	border: none;
 	border-bottom: none;
 	opacity: 1;
-	display: none;
+	/* 얘였어 사라졌다 말았다 하는 애 */
+	display: block;
 	z-index: 9999;
 }
 
@@ -168,6 +172,12 @@ nav.navbar.fixed-to-top{
 	font-weight: 700;
 	text-transform: uppercase;
 }
+/* 추가 */
+.navbar-nav .has-sub {
+	color: #fff;
+	font-weight: 700;
+	text-transform: uppercase;
+} 
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus{
 	color: #3A3A3A;
@@ -187,6 +197,170 @@ nav.navbar.fixed-to-top{
 	font-weight: 700;
 	font-size: 2em;
 }
+
+/* ================================
+ dropdown
+================================= */
+
+#dropmenu ul, #dropmenu li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#dropmenu ul{
+	position: relative;
+	z-index: 597;
+}
+
+#dropmenu ul li {
+	float: left;
+	min-height: 1px;
+	vertical-align: middle;
+}
+
+#dropmenu ul li.hover, #dropmenu ul li:hover {
+	position: relative;
+	z-index: 599;
+	cursor: default;
+}
+
+#dropmenu ul ul {
+	visibility: hidden;
+	position: absolute;
+	top: 100%;
+	left: 0;
+	z-index: 598;
+	width: 100%;
+}
+
+#dropmenu ul ul li {
+	float: none;
+}
+
+#dropmenu ul ul ul {
+	top: 0;
+	left: auto;
+	right: -99.5%;
+}
+
+#dropmenu ul li:hover>ul {
+	visibility: visible;
+}
+
+#dropmenu ul ul {
+	bottom: 0;
+	left: 0;
+}
+
+#dropmenu ul ul {
+	margin-top: 0;
+}
+
+#dropmenu ul ul li {
+	font-weight: normal;
+}
+
+#dropmenu a {
+	display: block;
+	line-height: 1em;
+	text-decoration: none;
+}
+
+#dropmenu {
+	background: #FE7A66;
+	/*  border-bottom: 4px solid #1b9bff; */
+}
+
+#dropmenu>ul {
+	*display: inline-block;
+}
+
+#dropmenu:after, #dropmenu ul:after {
+	content: '';
+	display: block;
+	clear: both;
+}
+
+#dropmenu a {
+	background: #FE7A66;
+	color: #fff;
+	padding: 0 20px;
+}
+#dropmenu #list {
+	background: #FE7A66;
+	color: #fff;
+	padding: 0 20px;
+}
+
+#dropmenu ul {
+	text-transform: uppercase;
+}
+
+#dropmenu ul ul {
+	text-transform: none;
+	min-width: 190px;
+}
+
+#dropmenu ul ul a {
+	background: #666;
+	color: #FFF;
+	/*   border: 1px solid #0082e7; */
+	border-top: 0 none;
+	line-height: 150%;
+	padding: 16px 20px;
+}
+
+#dropmenu ul ul ul {
+	border-top: 0 none;
+}
+
+#dropmenu ul ul li {
+	position: relative
+}
+
+#dropmenu>ul>li>a {
+	line-height: 60px;
+}
+#dropmenu>ul>li {
+	line-height: 60px;
+}
+/* #dropmenu ul ul li:first-child>a {
+  border-top: 1px solid #333;
+} */
+#dropmenu ul ul li:hover>a {
+	background: #FE7A66;
+}
+
+#dropmenu ul ul li.has-sub>a:after {
+	content: '+';
+	position: absolute;
+	top: 50%;
+	right: 15px;
+	margin-top: -8px;
+}
+
+#dropmenu ul li:hover>a {
+	color: #333;
+}
+
+
+#dropmenu ul li.has-sub>a:after {
+  content: '+';
+  margin-left: 5px;
+}
+
+#dropmenu ul li.last ul {
+  left: auto;
+  right: 0;
+}
+
+#dropmenu ul li.last ul ul {
+  left: auto;
+  right: 99.5%;
+} 
+
+
 
 /* ================================
 Home sections
